entry point root

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Recipe page</title>
 
-   <link href="../src/output.css" rel="stylesheet">
+   <link href="./src/output.css" rel="stylesheet">
 
 </head>
 <body class="font-youngSerif text-stone-500 md:bg-Brown800/20">
@@ -16,7 +16,7 @@
   <main class="md:my-30 bg-white md:max-w-1/2 mx-auto md:rounded-4xl" >
 
     <header class="md:p-10">
-      <img src="../assets/images/image-omelette.jpeg" alt="image-omelette" class="md:rounded-2xl">
+      <img src="./assets/images/image-omelette.jpeg" alt="image-omelette" class="md:rounded-2xl">
     </header>
 
     <article class="pl-8 pr-8 md:pb-2">
